--- a/style.css
+++ b/style.css
@@ -1,47 +1,60 @@
-* {
-    padding: 0;
-    margin: 0;
-    font-family: monospace;
+
+.navigation {
+    background-color: #4CAF50;
+    position: relative;
 }
-ul {
-    list-style: none;
-    background: #22428c;
-}
-ul li {
+.dropdown {
+    position: relative;
     display: inline-block;
-    position:relative;
 }
-ul li a {
+   
+   /* change le visuel du bouton */
+   .dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+   }
+   
+   /* Montre le contenu drop-content lorsque l'on passe la souris au dessus de dropdown */
+   .dropdown:hover .dropdown-content {
     display: block;
-    padding: 10px 20px;
-    color: #fff;
-    text-decoration: none;
-    text-align: center;
-    font-size: 20px;
-}
-ul li ul.dropdown li {
-    display:block
-}
-ul li ul.dropdown li {
-    width: 100%;
-    background: #22438c;
-    position: absolute;
-    z-index: 999;
+   }
+   
+   /* change la couleur du bouton dropdown lorsque l'on hover celui ci */
+   .dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+   }
+   
+   /* Donne les ombres et le display de style du contenu de dropdown */
+   .dropdown-content {
     display: none;
-}
-ul li a :hover{
-    background: #112c66;
-}
-ul li a :hover ul.dropdown{
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+   }
+   
+   /* change l'écriture des liens et les espace du block dropdown */
+   .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
     display: block;
-}
-p.solid {
-    width:300px;clear:right;text-align:left;border-style: solid;background-color:blanchedalmond;
-}
-img.solid2 {
-    margin:5%;
+   }
+   
+   /* Change la couleur de fond des liens contenus dans dropdown lorsqu'ils sont survolés */
+   .dropdown-content a:hover {
+    background-color: rgb(42, 191, 89);
+   }
+img.solid {
+    margin:20%;
 }
 .main-content h2 {clear: both;}
+/* sert a mettre une bordure qui ressemble a une ombre*/
 img {
     box-shadow:8px 8px 10px 0 rgba(0,0,0,0.5);
 }
