--- a/styleSheetExo5.css
+++ b/styleSheetExo5.css
@@ -85,3 +85,8 @@ footer ul li a{
    .dropdown-content a:hover {
     background-color: rgb(42, 191, 89);
    }
+   footer ol li a{
+    font-size: 20px;
+    color: white; 
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
+}
